# template_python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
source/: conf.py
src/: main.py  ytdlp.bash
src/11757/: 11757_1.m3u8  11757_1.vtt  11757_10.m3u8  11757_10.vtt  11757_11.m3u8  11757_11.vtt  11757_12.m3u8  11757_12.vtt  11757_13.m3u8  11757_13.vtt  11757_14.m3u8  11757_14.vtt  11757_15.m3u8  11757_15.vtt  11757_16.m3u8  11757_16.vtt  11757_17.m3u8  11757_17.vtt  11757_18.m3u8  11757_18.vtt  11757_19.m3u8  11757_19.vtt  11757_2.m3u8  11757_2.vtt  11757_20.m3u8  11757_20.vtt  11757_21.m3u8  11757_21.vtt  11757_22.m3u8  11757_22.vtt  11757_23.m3u8  11757_23.vtt  11757_24.m3u8  11757_24.vtt  11757_25.m3u8  11757_25.vtt  11757_3.m3u8  11757_3.vtt  11757_4.m3u8  11757_4.vtt  (+10 more)
