[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
license = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"
homepage = ""
repository = ""
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
